--- a/HomeManager/View/Budget/ucCategorie.xaml
+++ b/HomeManager/View/Budget/ucCategorie.xaml
@@ -40,7 +40,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Budget Categorie" />
+                        Text="Categorie" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
@@ -90,7 +90,7 @@
                 Grid.Row="1"
                 Grid.Column="3"
                 HorizontalContentAlignment="Right"
-                Content="Budget Categorie"
+                Content="Categorie"
                 Foreground="#024f87" />
                 <TextBox
                 x:Name="txtBudgetCategorie"
