--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -116,6 +116,44 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="DeletePersoon" TargetType="ContentControl">
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="True">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ContentControl">
+                            <Border Background="{StaticResource myTitleBar}">
+                                <Path
+                                    Width="15"
+                                    Height="15"
+                                    Margin="0,0,0,0"
+                                    Data="{StaticResource myDeletePersoon}"
+                                    Fill="{StaticResource myWerkBalk}"
+                                    RenderTransformOrigin="0.5,0.5"
+                                    Stretch="Uniform" />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ContentControl">
+                            <Path
+                                Data="{StaticResource myDeletePersoon}"
+                                Fill="{StaticResource myWerkBalkDisable}"
+                                RenderTransformOrigin="0.5,0.5"
+                                Stretch="Uniform" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="AddImage" TargetType="ContentControl">
         <Setter Property="Margin" Value="5" />
         <Setter Property="Cursor" Value="Hand" />
@@ -224,40 +262,6 @@
     </Style>
 
 
-    <Style x:Key="DeletePersoon" TargetType="ContentControl">
-        <Setter Property="Margin" Value="5" />
-        <Setter Property="Cursor" Value="Hand" />
-        <Style.Triggers>
-            <Trigger Property="IsEnabled" Value="True">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="ContentControl">
-                            <Border Background="{StaticResource myBackground}">
-                                <Path
-                                    Data="{StaticResource myDeletePersoon}"
-                                    Fill="DarkGray"
-                                    RenderTransformOrigin="0.5,0.5"
-                                    Stretch="Uniform" />
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="ContentControl">
-                            <Path
-                                Data="{StaticResource myDeletePersoon}"
-                                Fill="{StaticResource myWerkBalkDisable}"
-                                RenderTransformOrigin="0.5,0.5"
-                                Stretch="Uniform" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
 
     <Style x:Key="CancelImage" TargetType="ContentControl">
         <Setter Property="Margin" Value="5" />
