--- a/HomeManager/View/Personen/ucPersonen.xaml
+++ b/HomeManager/View/Personen/ucPersonen.xaml
@@ -152,7 +152,7 @@
                                                 Margin="0,0,0,0"
                                                 Command="{Binding cmdDelete}"
                                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                                Style="{StaticResource DeletePersoon}"
+                                                Style="{StaticResource DeletePersonImage}"
                                                 ToolTip="Aanpassen" />
                                         </StackPanel>
                                     </StackPanel>
