--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -55,6 +55,9 @@
         <DataTemplate DataType="{x:Type VM:clsAccountViewModel}">
             <V:ucAccount />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type VM:clsPersonenViewModel}">
+            <V:ucPersonen />
+        </DataTemplate>
 
 
         <DataTemplate DataType="{x:Type VM:clsCategorieViewModel}">
@@ -96,8 +99,8 @@
 
         <V:ucTitlePerson
             Grid.ColumnSpan="2"
-            Margin="0,0,10,0"
             Width="120"
+            Margin="0,0,10,0"
             HorizontalAlignment="Right"
             VerticalAlignment="Center" />
 
@@ -143,6 +146,11 @@
                     Orientation="Vertical">
                     <Expander Style="{StaticResource myHamburgerPersonen}">
                         <StackPanel x:Name="stckPerson">
+                            <Button
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsPersonenViewModel"
+                                Content="Personen"
+                                Style="{StaticResource myMenuTandwiel}" />
                             <Button
                                 Command="{Binding NavCommand}"
                                 CommandParameter="clsPersoonViewModel"
