--- a/HomeManager/View/ucTitlePerson.xaml
+++ b/HomeManager/View/ucTitlePerson.xaml
@@ -35,8 +35,8 @@
                         CommandParameter="{Binding PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
                         Header="Afmelden" />
                     <MenuItem Header="Mijn Info" />
-                    <MenuItem Header="Ontgrendel een computer" />
-                    <MenuItem Header="Back-up maken" Command="{Binding cmdBackup}"/>
+                    <MenuItem Command="{Binding cmdUnLockUser}" Header="Ontgrendel een computer" />
+                    <MenuItem Command="{Binding cmdBackup}" Header="Back-up maken" />
                     <MenuItem Header="Logs raadplegen" />
                     <MenuItem Header="Exceptions raadplegen" />
                     <MenuItem Header="Exception emails beheren" />
